# data-visualizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.run/: build exec.run.xml  convert design.run.xml  design main.run.xml  design pop up.run.xml  format all.run.xml  run ui.run.xml  test manipulation.run.xml  version major.run.xml  version minor.run.xml  version patch.run.xml
src/: __init__.py  installer.spec  main.py  manipulation.py
src/ui/: design.py  design.ui  main.py
src/ui/design/: main.py  main.ui  pop_up.py  pop_up.ui
src/ui/interactions/: main.py  pop_up.py
tests/: sample.csv  test_manipulation.py
