[tool.poetry]
name = "data-visualizer"
version = "1.1.1"
description = "Simple 3D data visualizer"
authors = ["Alex Carimán"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "6.4.2"
vedo = "^2024.5.1"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pyqt6-tools = "^6.4.2.3.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."src/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
